# UQDG-mxfoil

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
UQDG_MATLAB/: README.md  tutorial1.m  tutorial2.m  tutorial3.m
UQDG_MATLAB/input/: README.md  krig_model.txt
UQDG_MATLAB/src/: krig_model.m  poly_model.m  sample.m  solver_eval.m  uq_analysis.m
UQDG_MATLAB/src/solvers/: mfoil.m  xfoil
UQDG_Python/: README.md  pyproject.toml  tutorial1.py  tutorial2.py  tutorial3.py  tutorial4.py
UQDG_Python/input/: krig_model.sur
UQDG_Python/output/: README.md
UQDG_Python/src/UQDG-mxfoil/: poly_model.py
UQDG_Python/src/UQDGmxfoil/: README.md  krig_model.py  poly_model.py  sample.py  solver_eval.py  uq_analysis.py
UQDG_Python/src/solvers/: mfoil.py  xfoil
src/UQDG-mxfoil/: krig_model.py  poly_model.py  solver_eval.py  uq_analysis.py
