[build-system]
requires = ["setuptools"] 
build-backend = "setuptools.build_meta"

[project]
name = "UQDGmxfoil"
version = "1.0.0"

description = "An educational uncertainty quantification software for xfoil and mfoil"

readme = "README.md"

requires-python = ">=3.9"

authors = [{ name = "Aidan Lay", email = "alay12@vols.utk.edu" }]

maintainers = [{ name = "Aidan Lay", email = "alay12@vols.utk.edu" }]

dependencies = ["numpy","scipy","matplotlib","pandas"]
